# crock

./: CHANGELOG.md  Cargo.toml  README.md
.gitea/workflows/: cargo.yaml
.github/workflows/: cargo.yaml  release.yaml
src/: clock.rs  main.rs
src/clock/: timebar.rs  ui.rs  uidata.rs
