[package]
name = "crock"
version = "0.2.0-alpha.0"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "MIT"
description = "clock tui"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/crock"
repository = "https://git.cscherr.de/PlexSheep/crock"
keywords = ["time", "clock", "tui"]
categories = ["date-and-time"]


[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
libpt = { version = "0.6.0", features = ["cli"] }
ratatui = "0.27.0"
tui-big-text = "0.4.5"
