[package]
name = "crock"
version = "0.2.0-alpha.1"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "MIT"
description = "clock tui"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/crock"
repository = "https://git.cscherr.de/PlexSheep/crock"
keywords = ["time", "clock", "tui"]
categories = ["date-and-time"]

[features]
default = ["desktop"]
desktop = ["dep:notify-rust"]


[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
humantime = "2.1.0"
libpt = { version = "0.6.0", features = ["cli"] }
notify-rust = { version = "4.11.0", optional = true }
ratatui = "0.27.0"
tui-big-text = "0.4.5"
